Gapfeeedbacklist-fixes

--- a/src/app/component/intake/intake.component.css
+++ b/src/app/component/intake/intake.component.css
@@ -5,6 +5,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    border-radius: 0px;
 }
 
 .leftHeadStyle {
@@ -22,13 +23,14 @@
 
 .rightStyle {
     overflow-x:auto;
+    height: 100%;
 }
 
 table {
     width: 100%;
 }
 
-.inkatebutton{ 
+.inkatebutton {
     height: 100%;
     background-color: #f5f5f5;
     border:none;
@@ -39,7 +41,8 @@ table {
 }
 
 .namestyle {
-    font-size: 14px;
+    font-size: 12px;
+    text-align: left;
 }
 
 .search-btn {
@@ -48,4 +51,14 @@ table {
 
 .search-btn .material-icons {
     margin-top: 3px;
+}
+
+td.mat-cell {
+    padding: .375rem .75rem;
+    font-size: 12px;
+}
+
+th.mat-header-cell {
+    padding: .375rem .75rem;
+    font-size: 14px;
 }
